# youtube-downloader-react

./: .gitignore  Cargo.toml  Dockerfile  README.md  gulpfile.js  package.json  webpack.config.js
.github/workflows/: build.yml
app/: index.html
app/scripts/: actions.js  main.jsx
app/scripts/actions/: DownloadActions.js
app/scripts/components/: App.js  App.jsx  AppBar.jsx  DownloadCard.jsx  DownloadForm.jsx  DownloadsList.jsx  ProgressBar.js  ProgressBar.jsx
app/scripts/reducers/: downloadsReducer.js  mainReducer.js
app/scripts/stores/: DownloadsStore.js
app/scripts/utils/: Api.js
app/styles/: App.scss  AppBar.scss  DownloadCard.scss  DownloadForm.scss  DownloadsList.scss  main.scss
client/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
client/src/: App.svelte  App.tsx  ButtonToggle.svelte  DownloadCard.svelte  MoreIcon.svelte  api.ts  index.css  stores.ts  types.ts
server/: Cargo.toml  CurrentDownloads.js  config.js  index.js  package-lock.json  package.json  youtube-dl.js
server/src/: download.ts  index.ts  lib.rs  main.rs  playlist.rs
server/test_data/playlists/: playlist.m3u8
server/tests/: download.rs
src/: lib.rs  main.rs
